--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <ul>
               <li>Dki Jakarta, Indonesia</li>
               <li>0896-3075-4384</li>
-              <li>alfanmardanie@gmail.com</li>
+              <li>alfan071093@gmail.com</li>
             </ul>
             </p>
           </div>
