--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Junior</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>alfanmardanie@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>alfan071093@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div>
