--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <ul>
               <li>Dki Jakarta, Indonesia</li>
               <li>0896-3075-4384</li>
-              <li>alfan071093@gmail.com</li>
+              <li>amdcustom7@gmail.com</li>
             </ul>
             </p>
           </div>
@@ -773,7 +773,7 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>alfanmardanie@gmail.com</p>
+            <p>amdcustom7@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
